boundary-tests/tests/fixtures/core_uses_orchestrator.stderr
error[E0433]: failed to resolve: use of unresolved module or unlinked crate `skycode_orchestrator`
 --> tests/fixtures/core_uses_orchestrator.rs:2:5
  |
2 | use skycode_orchestrator::orchestrator::router::TaskClass;
  |     ^^^^^^^^^^^^^^^^^^^^ use of unresolved module or unlinked crate `skycode_orchestrator`
  |
  = help: if you wanted to use a crate named `skycode_orchestrator`, use `cargo add skycode_orchestrator` to add it to your `Cargo.toml`
