boundary-tests/tests/fixtures/core_uses_orchestrator.rs
// skycode-core must never import from skycode-orchestrator.
use skycode_orchestrator::orchestrator::router::TaskClass;

fn main() {
    let _ = std::mem::size_of::<TaskClass>();
}
